# minhashlib

./: .gitignore  DiffChecker.py  LICENSE  README.md  pyproject.toml
benchmarks/: benchmark_claims_individual_common.py  benchmark_claims_scaling.py  benchmark_claims_suite.py  benchmark_diffchecker_vs_datasketch.py  benchmark_wikipedia_dump_vs_datasketch.py
minhashlib/: __init__.py  diffchecker.py
scripts/: setup_benchmark_data.py
tests/: benchmark_20newsgroups_vs_datasketch.py  benchmark_claims_accuracy.py  benchmark_claims_memory.py  benchmark_claims_performance.py  test_diffchecker.py
